--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "red blue pink orange\n"
+      "red blue pink\n"
      ]
     }
    ],
@@ -253,8 +253,8 @@
     "\n",
     "color_list = [\"red\" , \"blue\" , \"pink\" , \"orange\"]\n",
     "\n",
-    "x,y,z,z2 = color_list\n",
-    "print(x,y,z,z2)"
+    "x,y,z,r = (color_list)\n",
+    "print(x,y,z)"
    ]
   }
  ],
