--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "red blue pink\n"
+      "red blue pink orange\n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
     "color_list = [\"red\" , \"blue\" , \"pink\" , \"orange\"]\n",
     "\n",
     "x,y,z,r = (color_list)\n",
-    "print(x,y,z)"
+    "print(x,y,z,r)"
    ]
   }
  ],
