--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -256,6 +256,41 @@
     "x,y,z,r = (color_list)\n",
     "print(x,y,z,r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0 , 1)\n",
+      "(0 , 2)\n",
+      "(0 , 3)\n",
+      "(0 , 4)\n",
+      "(0 , 5)\n",
+      "(1 , 1)\n",
+      "(1 , 2)\n",
+      "(1 , 3)\n",
+      "(1 , 4)\n",
+      "(1 , 5)\n",
+      "(2 , 1)\n",
+      "(2 , 2)\n",
+      "(2 , 3)\n",
+      "(2 , 4)\n",
+      "(2 , 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for first in range(3):\n",
+    "    \n",
+    "    for second in range(1,6):\n",
+    "        print(f\"({first} , {second})\")"
+   ]
   }
  ],
  "metadata": {
