--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -291,6 +291,30 @@
     "    for second in range(1,6):\n",
     "        print(f\"({first} , {second})\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is a number greater than 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exception Handling\n",
+    "x = 5\n",
+    "try:\n",
+    "    if x // 2 > 0:\n",
+    "        print(f\"{x} is a number greater than 0\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")"
+   ]
   }
  ],
  "metadata": {
