--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -315,6 +315,15 @@
     "except ValueError:\n",
     "    print(\"Invalid Input\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(4)"
+   ]
   }
  ],
  "metadata": {
