--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -320,9 +320,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "print(4)"
+    "print(\"U\")"
    ]
   }
  ],
