--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Given string: dhfsggf\n",
-      "Given Integer Value: 344\n",
+      "Given string: ghh\n",
+      "Given Integer Value: 5\n",
       "Given Boolean Value: True\n",
-      "Given Float Value: 4.3\n"
+      "Given Float Value: 6.7\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
     "\n",
     "user_input_bool = bool(input(\"Enter a bool: \"))\n",
     "\n",
-    "user_input_float = float(input(\"Enter a float: \"))\n",
+    "user_input_float = float(input(\"Enter a float : \"))\n",
     "\n",
     "print(\"Given string:\" , user_input_string)\n",
     "print(\"Given Integer Value:\" , user_input_integer)\n",
