--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "The numbers:  5\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
     "    return add\n",
     "\n",
     "#numbers = sum()\n",
-    "print(sum_numbers(2,3))"
+    "print(\"The numbers: \" , sum_numbers(2,3))"
    ]
   },
   {
