--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +251,9 @@
    "source": [
     "#Unpacking\n",
     "\n",
-    "color_list = [\"red\" , \"blue\" , \"pink\" , \"orange\"]\n",
+    "color_list = [\"red\" , \"blue\" , \"pink\" , \"orange\", \"white\"]\n",
     "\n",
-    "x,y,z,r = (color_list)\n",
+    "x,y,z,r, n = (color_list)\n",
     "print(x,y,z,r)"
    ]
   },
