--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -259,28 +259,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0 , 1)\n",
-      "(0 , 2)\n",
-      "(0 , 3)\n",
-      "(0 , 4)\n",
-      "(0 , 5)\n",
-      "(1 , 1)\n",
-      "(1 , 2)\n",
-      "(1 , 3)\n",
-      "(1 , 4)\n",
-      "(1 , 5)\n",
-      "(2 , 1)\n",
-      "(2 , 2)\n",
-      "(2 , 3)\n",
-      "(2 , 4)\n",
-      "(2 , 5)\n"
+      " The range is: (0 , 1)\n",
+      " The range is: (0 , 2)\n",
+      " The range is: (0 , 3)\n",
+      " The range is: (0 , 4)\n",
+      " The range is: (0 , 5)\n",
+      " The range is: (1 , 1)\n",
+      " The range is: (1 , 2)\n",
+      " The range is: (1 , 3)\n",
+      " The range is: (1 , 4)\n",
+      " The range is: (1 , 5)\n",
+      " The range is: (2 , 1)\n",
+      " The range is: (2 , 2)\n",
+      " The range is: (2 , 3)\n",
+      " The range is: (2 , 4)\n",
+      " The range is: (2 , 5)\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
     "for first in range(3):\n",
     "    \n",
     "    for second in range(1,6):\n",
-    "        print(f\"({first} , {second})\")"
+    "        print(f\" The range is: ({first} , {second})\")"
    ]
   },
   {
