--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is a number greater than 0\n"
+      "5 is a number that is greater than 0\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
     "x = 5\n",
     "try:\n",
     "    if x // 2 > 0:\n",
-    "        print(f\"{x} is a number greater than 0\")\n",
+    "        print(f\"{x} is a number that is greater than 0\")\n",
     "\n",
     "except ValueError:\n",
     "    print(\"Invalid Input\")"
