--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -332,6 +332,17 @@
    "source": [
     "print(\"Maria Farooq\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    def move(self):\n",
+    "        print(\"Move\")"
+   ]
   }
  ],
  "metadata": {
