--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -341,7 +341,9 @@
    "source": [
     "class Point:\n",
     "    def move(self):\n",
-    "        print(\"Move\")"
+    "        print(\"Move\")\n",
+    "    def draw(self):\n",
+    "        print(\"Draw\")"
    ]
   }
  ],
