--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -343,7 +343,10 @@
     "    def move(self):\n",
     "        print(\"Move\")\n",
     "    def draw(self):\n",
-    "        print(\"Draw\")"
+    "        print(\"Draw\")\n",
+    "        \n",
+    "        \n",
+    "point1 = Point()"
    ]
   }
  ],
