--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -346,7 +346,9 @@
     "        print(\"Draw\")\n",
     "        \n",
     "        \n",
-    "point1 = Point()"
+    "point1 = Point()\n",
+    "point1.x = 10\n",
+    "point1.y = 20\n"
    ]
   }
  ],
