--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -335,9 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "class Point:\n",
     "    def move(self):\n",
@@ -348,7 +357,9 @@
     "        \n",
     "point1 = Point()\n",
     "point1.x = 10\n",
-    "point1.y = 20\n"
+    "point1.y = 20\n",
+    "point1.draw()\n",
+    "print(point1.x)\n"
    ]
   }
  ],
