--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,11 @@
     "point1.x = 10\n",
     "point1.y = 20\n",
     "point1.draw()\n",
-    "print(point1.x)\n"
+    "print(point1.x)\n",
+    "\n",
+    "#Object 2\n",
+    "\n",
+    "point2 = Point()\n"
    ]
   }
  ],
