--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,11 @@
     "\n",
     "#Object 2\n",
     "\n",
-    "point2 = Point()\n"
+    "point2 = Point()\n",
+    "point2.x = 90\n",
+    "point2.weather = \"cold\"\n",
+    "print(point2.weather)\n",
+    "\n"
    ]
   }
  ],
