--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -343,8 +343,19 @@
      "output_type": "stream",
      "text": [
       "Draw\n",
-      "10\n"
+      "10\n",
+      "cold\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Point.move of <__main__.Point object at 0x0000019B4E45BFB0>>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -367,7 +378,7 @@
     "point2.x = 90\n",
     "point2.weather = \"cold\"\n",
     "print(point2.weather)\n",
-    "\n"
+    "point2.move()\n"
    ]
   }
  ],
