--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -344,18 +344,9 @@
      "text": [
       "Draw\n",
       "10\n",
-      "cold\n"
+      "cold\n",
+      "Move\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bound method Point.move of <__main__.Point object at 0x0000019B4E45BFB0>>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
