--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -371,6 +371,17 @@
     "print(point2.weather)\n",
     "point2.move()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Weather:\n",
+    "    def check_weather(self):\n",
+    "        print()"
+   ]
   }
  ],
  "metadata": {
