--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "class Weather:\n",
     "    def check_weather(self):\n",
-    "        print()"
+    "        print(\"Weather is cold\")"
    ]
   }
  ],
