--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -374,13 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Weather:\n",
     "    def check_weather(self):\n",
-    "        print(\"Weather is cold\")"
+    "        print(\"Weather is cold\")\n",
+    "\n",
+    "\n",
+    "#Object"
    ]
   }
  ],
