--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,9 @@
     "        print(\"Weather is cold\")\n",
     "\n",
     "\n",
-    "#Object"
+    "#Object\n",
+    "the_weather = Weather()\n",
+    "the_weather.cold = \"weather is cold\""
    ]
   }
  ],
