--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -385,7 +385,8 @@
     "\n",
     "#Object\n",
     "the_weather = Weather()\n",
-    "the_weather.cold = \"weather is cold\""
+    "the_weather.cold = \"weather is cold\"\n",
+    "the_weather.hot = \"weather is hot\""
    ]
   }
  ],
