--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -374,9 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weather is cold\n"
+     ]
+    }
+   ],
    "source": [
     "class Weather:\n",
     "    def check_weather(self):\n",
@@ -386,7 +394,8 @@
     "#Object\n",
     "the_weather = Weather()\n",
     "the_weather.cold = \"weather is cold\"\n",
-    "the_weather.hot = \"weather is hot\""
+    "the_weather.hot = \"weather is hot\"\n",
+    "the_weather.check_weather()"
    ]
   }
  ],
