--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -374,14 +374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather is cold\n"
+      "Weather is cold\n",
+      "weather is hot\n"
      ]
     }
    ],
@@ -395,7 +396,8 @@
     "the_weather = Weather()\n",
     "the_weather.cold = \"weather is cold\"\n",
     "the_weather.hot = \"weather is hot\"\n",
-    "the_weather.check_weather()"
+    "the_weather.check_weather()\n",
+    "print(the_weather.hot)"
    ]
   }
  ],
