--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1cccedc4",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
     "        if age == 20:\n",
     "            print(\"You are eligible!\")\n",
     "        else:\n",
-    "            print(\"You are not eligible!\")\n",
+    "            print(\"You're not eligible!\")\n",
     "    \n",
     "    \n",
     "age1 = Age()\n",
