--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -31,6 +31,18 @@
     "age1.less_than_20()\n",
     "print(age1.x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "64bdef14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_numbers(number1 , number2):\n",
+    "    sum = number1 + number2\n",
+    "    return sum"
+   ]
   }
  ],
  "metadata": {
