--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -43,6 +43,24 @@
     "    sum = number1 + number2\n",
     "    return sum"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5287527e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_numbers(34,56))"
+   ]
   }
  ],
  "metadata": {
