--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -61,6 +61,18 @@
    "source": [
     "print(sum_numbers(34,56))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4fc8edf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtract_numbers(num1 , num2):\n",
+    "    subtract = num1 - num2\n",
+    "    return subtract"
+   ]
   }
  ],
  "metadata": {
