--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -73,6 +73,24 @@
     "    subtract = num1 - num2\n",
     "    return subtract"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2c0c83d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-22\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subtract_numbers(23, 45))"
+   ]
   }
  ],
  "metadata": {
