--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -91,6 +91,24 @@
    "source": [
     "print(subtract_numbers(23, 45))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6d745982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subtract_numbers(45, 23))"
+   ]
   }
  ],
  "metadata": {
