--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -109,6 +109,18 @@
    "source": [
     "print(subtract_numbers(45, 23))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a30139a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtract_numbers(num1 , num2):\n",
+    "    subtract = num1 - num2\n",
+    "    return subtract"
+   ]
   }
  ],
  "metadata": {
