--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -112,13 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a30139a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def subtract_numbers(num1 , num2):\n",
     "    subtract = num1 - num2\n",
+    "    if subtract == -(subtract):\n",
+    "        subtract* -1\n",
     "    return subtract"
    ]
   }
