--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -112,16 +112,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a30139a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subtract_numbers(num1 , num2):\n",
+    "def subtract_number(num1 , num2):\n",
     "    subtract = num1 - num2\n",
     "    if subtract == -(subtract):\n",
     "        subtract* -1\n",
     "    return subtract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92d8472a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'subtract_number' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msubtract_number\u001b[49m(\u001b[38;5;241m23\u001b[39m, \u001b[38;5;241m12\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'subtract_number' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(subtract_number(23, 12))"
    ]
   }
  ],
