Higher Order Functions

--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -33,113 +33,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "350f0bd9",
+   "metadata": {},
+   "source": [
+    "Higher rder functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "64bdef14",
+   "execution_count": 3,
+   "id": "587dd329",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def double(x):\n",
+    "    return x* 2\n",
+    "\n",
+    "numbers = {1,2,3,4,5}\n",
+    "doubled = list(map(double, numbers))\n",
+    "print(doubled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b251fece",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def sum_numbers(number1 , number2):\n",
-    "    sum = number1 + number2\n",
-    "    return sum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5287527e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sum_numbers(34,56))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4fc8edf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def subtract_numbers(num1 , num2):\n",
-    "    subtract = num1 - num2\n",
-    "    return subtract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "2c0c83d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-22\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(subtract_numbers(23, 45))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6d745982",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(subtract_numbers(45, 23))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a30139a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def subtract_number(num1 , num2):\n",
-    "    subtract = num1 - num2\n",
-    "    \n",
-    "    return subtract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "92d8472a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(subtract_number(23, 12))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
