--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -65,11 +65,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d13b15ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_even(n):\n",
+    "    return n%2 == 0\n",
+    "\n",
+    "    \n",
+    "number = {1,2,3,4,5}\n",
+    "even = list(filter(check_even , number))\n",
+    "print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b251fece",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiply(x,y):\n",
+    "    return (x*y)\n",
+    "numbers = {1,2,3,4,5}\n"
+   ]
   }
  ],
  "metadata": {
