--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -89,14 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b251fece",
+   "execution_count": 9,
+   "id": "e220e110",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b251fece",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
     "def multiply(x,y):\n",
-    "    return (x*y)\n",
-    "numbers = {1,2,3,4,5}\n"
+    "    return x*y\n",
+    "numbers = {1,2,3,4,5}\n",
+    "multiplied = reduce(multiply, numbers)\n",
+    "print(multiplied)"
    ]
   }
  ],
