--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b251fece",
    "metadata": {},
    "outputs": [
@@ -113,10 +113,34 @@
    ],
    "source": [
     "def multiply(x,y):\n",
+    "    \n",
     "    return x*y\n",
     "numbers = {1,2,3,4,5}\n",
     "multiplied = reduce(multiply, numbers)\n",
     "print(multiplied)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "37eca7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Maria', 45), ('Sehrish', 54), ('Misbah', 345)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zip Function\n",
+    "\n",
+    "name = [\"Maria\" , \"Sehrish\", \"Misbah\"]\n",
+    "age = [45, 54, 345]\n",
+    "paired = list(zip(name , age))\n",
+    "print(paired)"
    ]
   }
  ],
