--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -142,6 +142,29 @@
     "paired = list(zip(name , age))\n",
     "print(paired)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "92b90ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: apple\n",
+      "2: banana\n",
+      "3: orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "#enumerate\n",
+    "fruits = ['apple', 'banana', 'orange']\n",
+    "for i, item in enumerate(fruits, start=1):\n",
+    "    print(f\"{i}: {item}\")"
+   ]
   }
  ],
  "metadata": {
