--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -165,6 +165,32 @@
     "for i, item in enumerate(fruits, start=1):\n",
     "    print(f\"{i}: {item}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0da83e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "5 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "y=6\n",
+    "print(x)\n",
+    "print(y)\n",
+    "\n",
+    "x=y = y=x\n",
+    "print(x, y)\n"
+   ]
   }
  ],
  "metadata": {
