--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0da83e79",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,8 @@
      "text": [
       "5\n",
       "6\n",
-      "6 5\n"
+      "6 5\n",
+      "5 5\n"
      ]
     }
    ],
@@ -189,7 +190,8 @@
     "print(y)\n",
     "\n",
     "x,y = y,x\n",
-    "print(x, y)\n"
+    "print(x, y)\n",
+    "print(y, y)\n"
    ]
   }
  ],
