--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0da83e79",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,8 @@
       "5\n",
       "6\n",
       "6 5\n",
-      "5 5\n"
+      "5 5\n",
+      "6 6\n"
      ]
     }
    ],
@@ -191,7 +192,8 @@
     "\n",
     "x,y = y,x\n",
     "print(x, y)\n",
-    "print(y, y)\n"
+    "print(y, y)\n",
+    "print(x, x)\n"
    ]
   }
  ],
