--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "0da83e79",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,8 @@
       "6\n",
       "6 5\n",
       "5 5\n",
-      "6 6\n"
+      "6 6\n",
+      "5 6\n"
      ]
     }
    ],
@@ -193,7 +194,8 @@
     "x,y = y,x\n",
     "print(x, y)\n",
     "print(y, y)\n",
-    "print(x, x)\n"
+    "print(x, x)\n",
+    "print(y, x)\n"
    ]
   }
  ],
