--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0da83e79",
    "metadata": {},
    "outputs": [
@@ -176,6 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Before swapping\n",
       "5\n",
       "6\n",
       "6 5\n",
@@ -188,6 +189,7 @@
    "source": [
     "x=5\n",
     "y=6\n",
+    "print(\"Before swapping\")\n",
     "print(x)\n",
     "print(y)\n",
     "\n",
