--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0da83e79",
    "metadata": {},
    "outputs": [
@@ -179,6 +179,7 @@
       "Before swapping\n",
       "5\n",
       "6\n",
+      "After swapping\n",
       "6 5\n",
       "5 5\n",
       "6 6\n",
@@ -194,6 +195,7 @@
     "print(y)\n",
     "\n",
     "x,y = y,x\n",
+    "print(\"After swapping\")\n",
     "print(x, y)\n",
     "print(y, y)\n",
     "print(x, x)\n",
